--- a/site/src/index.css
+++ b/site/src/index.css
@@ -4,4 +4,10 @@
 
 html {
   scroll-behavior: smooth;
+  height: -webkit-fill-available;
+}
+
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
