added notes to orders

--- a/server/src/email-templates/views/order-created-manager.hbs
+++ b/server/src/email-templates/views/order-created-manager.hbs
@@ -14,7 +14,8 @@
 				Email: {{email}},
 				Phone: {{phone}},
 				Type of clothes: {{clothType}},
-				Type of service: {{productType}}
+				Type of service: {{productType}},
+				Note: {{note}}
 			</p>
 		</td>
 	</tr>
