--- a/site/src/index.css
+++ b/site/src/index.css
@@ -13,11 +13,32 @@ body {
 }
 
 @keyframes marquee {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-25%); }
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-25%);
+  }
 }
 
 .animate-marquee {
   display: flex;
   animation: marquee 10s linear infinite;
+}
+
+@font-face {
+  font-family: "CondensedFont";
+  src: url("/fonts/condensed.woff2") format("woff2");
+  font-display: swap;
+}
+@layer utilities {
+  .back {
+    background: repeating-linear-gradient(
+      to bottom,
+      #CEB27F 0px,
+      #dcc271 200px,
+      #dcc271 200px,
+      #CEB27F 400px
+    );
+  }
 }
