--- a/server/src/email-templates/partials/footer.hbs
+++ b/server/src/email-templates/partials/footer.hbs
@@ -1,7 +1,7 @@
-<table style="width: 100%; padding: 10px 35px; background-color: #575757; box-sizing: border-box; color: white">
+<table class="footer">
 	<tr>
 		<td style="font-size: 14px; text-align: center;">
-			Prano - Copyright © 2025
+			<a href="https://prano.group/">Prano</a> - Copyright © 2025
 		</td>
 	</tr>
 </table>
