--- a/server/src/email-templates/layouts/main.hbs
+++ b/server/src/email-templates/layouts/main.hbs
@@ -5,7 +5,34 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>E-mail</title>
+	<style>
+		.header {
+			color: #CEB27F;
+			background-color: #22282B;
+
+			width: 100%;
+			padding: 4px 35px;
+			box-sizing: border-box;
+		}
+
+		.body {
+			color: #22282B;
+
+			width: 100%;
+			padding: 45px 35px;
+			box-sizing: border-box;
+		}
+
+		.footer {
+			color: #CEB27F;
+			background-color: #22282B;
+
+			width: 100%;
+			padding: 10px 35px;
+			box-sizing: border-box;
+		}
+	</style>
 </head>
 <body>
 	{{>header}}
