--- a/server/src/email-templates/partials/header.hbs
+++ b/server/src/email-templates/partials/header.hbs
@@ -1,6 +1,13 @@
-<table style="width: 100%; padding: 4px 35px; background-color: #788ca0; box-sizing: border-box; color: white">
+<table class="header">
 	<tr>
-		<td style="font-size: 20px; text-align: left;">
+		<td style="text-align: left;">
+<!--			<a href="https://prano.group/">-->
+<!--				<img-->
+<!--					src="cid:logo"-->
+<!--					alt="Prano"-->
+<!--					style="display:block;margin:0 auto;"-->
+<!--				/>-->
+<!--			</a>-->
 			<b>Prano</b>
 		</td>
 	</tr>
