--- a/site/src/index.css
+++ b/site/src/index.css
@@ -35,10 +35,44 @@ body {
   .back {
     background: repeating-linear-gradient(
       to bottom,
-      #CEB27F 0px,
+      #ceb27f 0px,
       #dcc271 200px,
       #dcc271 200px,
-      #CEB27F 400px
+      #ceb27f 400px
     );
   }
+}
+@font-face {
+  font-family: "Tinos";
+  src: url("/fonts/Tinos-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Tinos";
+  src: url("/fonts/Tinos-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Tinos";
+  src: url("/fonts/Tinos-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Tinos";
+  src: url("/fonts/Tinos-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Manrope";
+  src: url("/fonts/Manrope-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900; /* Variable font */
+  font-style: normal;
 }
