--- a/server/src/email-templates/partials/footer.hbs
+++ b/server/src/email-templates/partials/footer.hbs
@@ -1,7 +1,7 @@
 <table class="footer">
 	<tr>
 		<td style="font-size: 14px; text-align: center;">
-			<a href="https://prano.group/">Prano</a> - Copyright © 2025
+			Prano - Copyright © 2025
 		</td>
 	</tr>
 </table>
