--- a/server/src/email-templates/partials/header.hbs
+++ b/server/src/email-templates/partials/header.hbs
@@ -1,14 +1,13 @@
 <table class="header">
 	<tr>
 		<td style="text-align: left;">
-<!--			<a href="https://prano.group/">-->
-<!--				<img-->
-<!--					src="cid:logo"-->
-<!--					alt="Prano"-->
-<!--					style="display:block;margin:0 auto;"-->
-<!--				/>-->
-<!--			</a>-->
-			<b>Prano</b>
+			<a href="https://prano.group/">
+				<img
+					src="https://prano.group/assets/prano_logo_no_bg-BQmpbaUx.png"
+					alt="Prano"
+					style="max-width: 100%; height: 3rem; padding-top: .25rem;"
+				/>
+			</a>
 		</td>
 	</tr>
 </table>
