--- a/server/src/email-templates/views/order-created-manager.hbs
+++ b/server/src/email-templates/views/order-created-manager.hbs
@@ -1,34 +1,34 @@
 <table class="body">
 	<tr>
 		<td style="font-size: 18px; text-align: center">
-			{{nameOfUser}} created new order!
+			{{nameOfUser}} створив нове замовлення!
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
 			<p style="margin: 17px 0 0;">
-				Order:
+				Замовлення:
 			</p>
 			<p style="margin: 17px 0 0;">
-				Name: {{name}},
+				Ім'я: {{name}},
 				Email: {{email}},
-				Phone: {{phone}},
-				Type of clothes: {{clothType}},
-				Type of service: {{productType}},
-				Note: {{note}}
+				Номер телефону: {{phone}},
+				Тип одягу: {{clothType}},
+				Тип послуги: {{productType}},
+				Нотатки: {{note}}
 			</p>
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
 			<p style="margin: 17px 0 0;">
-				Ordered by:
+				Замовлено з такого профілю:
 			</p>
 			<p style="margin: 17px 0 0;">
-				cleanCloudId: {{cleanCloudId}},
-				name: {{nameOfUser}},
-				email: {{emailOfUser}},
-				phone: {{phoneOfUser}}
+				СleanCloud Id: {{cleanCloudId}},
+				Ім'я: {{nameOfUser}},
+				Email: {{emailOfUser}},
+				Номер телефону: {{phoneOfUser}}
 			</p>
 		</td>
 	</tr>
