--- a/server/src/email-templates/views/order-created-user.hbs
+++ b/server/src/email-templates/views/order-created-user.hbs
@@ -1,24 +1,24 @@
 <table class="body">
 	<tr>
 		<td style="font-size: 18px; text-align: center">
-			{{nameOfUser}}, order has been created!
+			{{nameOfUser}}, ваше замовлення прийнято!
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
 			<p style="margin: 17px 0 0;">
-				The order is being processed. The manager will contact you as soon as possible
+				Замовлення обробляється. Менеджер зв'яжеться з вами якомога швидше.
 			</p>
 			<p style="margin: 17px 0 0;">
-				Order:
+				Замовлення:
 			</p>
 			<p style="margin: 17px 0 0;">
-				Name: {{name}},
+				Ім'я: {{name}},
 				Email: {{email}},
-				Phone: {{phone}},
-				Type of clothes: {{clothType}},
-				Type of service: {{productType}},
-				Note: {{note}}
+				Номер телефону: {{phone}},
+				Тип одягу: {{clothType}},
+				Тип послуги: {{productType}},
+				Нотатки: {{note}}
 			</p>
 		</td>
 	</tr>
