--- a/server/src/email-templates/views/password-changed.hbs
+++ b/server/src/email-templates/views/password-changed.hbs
@@ -1,13 +1,13 @@
 <table class="body">
 	<tr>
 		<td style="font-size: 18px; text-align: center">
-			{{name}}, your password has been changed!
+			{{name}}, ваш пароль змінено!
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
 			<p style="margin: 17px 0 0;">
-				You changed your password
+				Ви змінили свій пароль
 			</p>
 		</td>
 	</tr>
