--- a/server/src/email-templates/views/register.hbs
+++ b/server/src/email-templates/views/register.hbs
@@ -1,20 +1,20 @@
 <table class="body">
 	<tr>
 		<td style="font-size: 18px; text-align: center">
-			{{name}}, Welcome to our platform!
+			{{name}}, ласкаво просимо на наш сайт!
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
 			<p style="margin: 17px 0 0;">
-				You need submit your email, please click link below
+				Вам потрібно підтвердити свою електронну адресу, будь ласка, натисніть посилання нижче
 			</p>
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
 			<a href="{{frontUrl}}/activate/{{actionToken}}">
-				Submit
+				Підтвердити
 			</a>
 		</td>
 	</tr>
