--- a/server/src/email-templates/views/forgot-password.hbs
+++ b/server/src/email-templates/views/forgot-password.hbs
@@ -1,20 +1,20 @@
 <table class="body">
 	<tr>
 		<td style="font-size: 18px; text-align: center">
-			Do not worry, we control your password!
+			Не хвилюйтеся, ми контролюємо ваш пароль!
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
 			<p style="margin: 17px 0 0;">
-				Click link below to restore your password
+				Натисніть посилання нижче, щоб відновити свій пароль
 			</p>
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
 			<a href="{{frontUrl}}/restore-password/{{actionToken}}">
-				Restore
+				Відновити
 			</a>
 		</td>
 	</tr>
