--- a/site/src/index.css
+++ b/site/src/index.css
@@ -76,3 +76,15 @@ body {
   font-weight: 100 900; /* Variable font */
   font-style: normal;
 }
+@keyframes marquee-vertical {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+
+.animate-marquee-vertical {
+  animation: marquee-vertical 20s linear infinite;
+}
