--- a/server/src/email-templates/views/forgot-password.hbs
+++ b/server/src/email-templates/views/forgot-password.hbs
@@ -7,14 +7,25 @@
 	<tr>
 		<td style="text-align: center">
 			<p style="margin: 17px 0 0;">
-				Натисніть посилання нижче, щоб відновити свій пароль
+				Натисніть на кнопку нижче, щоб відновити свій пароль
 			</p>
 		</td>
 	</tr>
 	<tr>
 		<td style="text-align: center">
-			<a href="{{frontUrl}}/restore-password/{{actionToken}}">
+			<a href="{{frontUrl}}/restore-password/{{actionToken}}"
+			   style="display:inline-block; padding: 10px 20px; background:#CEB27F; color:#fff; text-decoration:none; border-radius:6px;">
 				Відновити
+			</a>
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: center">
+			<p style="margin-bottom: 17px;">
+				або перейдіть за наступним посиланням:
+			</p>
+			<a href="{{frontUrl}}/restore-password/{{actionToken}}">
+				{{frontUrl}}/restore-password/{{actionToken}}
 			</a>
 		</td>
 	</tr>
