--- a/server/src/email-templates/views/register.hbs
+++ b/server/src/email-templates/views/register.hbs
@@ -7,14 +7,25 @@
 	<tr>
 		<td style="text-align: center">
 			<p style="margin: 17px 0 0;">
-				Вам потрібно підтвердити свою електронну адресу, будь ласка, натисніть посилання нижче
+				Вам потрібно підтвердити свою електронну адресу, будь ласка, натисніть на кнопку нижче
 			</p>
 		</td>
 	</tr>
 	<tr>
-		<td style="text-align: center">
-			<a href="{{frontUrl}}/activate/{{actionToken}}">
+		<td style="text-align: center; padding: 15px 0;">
+			<a href="{{frontUrl}}/activate/{{actionToken}}"
+			   style="display:inline-block; padding: 10px 20px; background:#CEB27F; color:#fff; text-decoration:none; border-radius:6px;">
 				Підтвердити
+			</a>
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: center">
+			<p style="margin-bottom: 17px;">
+				або перейдіть за наступним посиланням:
+			</p>
+			<a href="{{frontUrl}}/activate/{{actionToken}}">
+				{{frontUrl}}/activate/{{actionToken}}
 			</a>
 		</td>
 	</tr>
