--- a/server/src/email-templates/views/order-created-user.hbs
+++ b/server/src/email-templates/views/order-created-user.hbs
@@ -17,8 +17,10 @@
 				Email: {{email}},
 				Номер телефону: {{phone}},
 				Тип одягу: {{clothType}},
-				Тип послуги: {{productType}},
-				Нотатки: {{note}}
+				Тип послуги: {{productType}}
+				{{#if note}}
+					, Нотатки: {{note}}
+				{{/if}}
 			</p>
 		</td>
 	</tr>
